more spacing issues

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -20,13 +20,14 @@ color:darkgrey;
   margin-bottom:10px;
 }
 
-.buttonWrapper{
+.buttonWrapper {
   width: 100%;
-  height:100px;
+  margin-top:60px;
+  margin-bottom:40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  }
+}
 
 .generatorCard {
   border-radius: 5px;
